Updated swagger host to Render URL
